--- a/templates/photography/index.ejs
+++ b/templates/photography/index.ejs
@@ -43,46 +43,26 @@
 
 
   <main>
-    <div class="blankHS"></div>
 
-    <div class="Grid Grid--full Grid--gutters u-textCenter">
-      <div class="Grid-cell">
-        <h1 class="Grid Grid--center"> <span class="specialTextL Grey600">Photographs</span><img class="moveUpDown widthLogo" src="../icon/arrow-accordion-down_grey600.svg" alt="Scroll down">
-        </h1>
-      </div>
-    </div>
 
-    <nav class="section-nav">
-      <ol>
-        <li><a href="#content1" class="titleRightPanel">2023</a>
-          <ul>
-            <li class="rightPanel"><a href="#content11"> &#160; Pacific Grove Rocky View</a></li>
-            <li class="rightPanel"><a href="#content12"> &#160; Monarch Butterfly Sanctuary </a></li>
+    <nav class="new_side_bar">
+      <ul>
+        <li class="active"><a href="#content1" class="side_bar_content">
+            2023
+          </a></li>
 
-          </ul>
-        </li>
-        <li><a href="#content2" class="titleRightPanel">2020</a>
-          <ul>
-            <li class="rightPanel"><a href="#content21"> &#160; Yellowstone National Park
-              </a></li>
-            <li class="rightPanel"><a href="#content22"> &#160; Teton National Park</a></li>
-            <li class="rightPanel"><a href="#content23"> &#160; Donner Lake </a></li>
+        <li><a href="#content2" class="side_bar_content">
+            2020
+          </a></li>
 
-          </ul>
-        </li>
-        <li><a href="#content3" class="titleRightPanel">2019</a>
-          <ul>
-            <li class="rightPanel"><a href="#content31"> &#160; Bosque Del Apache National Wildlife Refuge </a></li>
-            <li class="rightPanel"><a href="#content32"> &#160; Sacramento National Wildlife Refuge </a></li>
+        <li><a href="#content3" class="side_bar_content">
+            2019
+          </a></li>
 
-            <li class="rightPanel"><a href="#content33"> &#160; White Sands National Monument </a></li>
-            <li class="rightPanel"><a href="#content34"> &#160; Taos Pueblo Indian Reservation </a></li>
 
-          </ul>
-        </li>
-
-      </ol>
+      </ul>
     </nav>
+
 
     <section id="content1">
 
