--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -153,7 +153,7 @@
   </div>
   <!-- Case study starts -->
   <main>
-    <nav class="new_side_bar">
+    <nav class="new_side_bar BlueBYP">
       <ul>
         <li><a href="#content1" class="side_bar_content">
             Background
