--- a/templates/main.css
+++ b/templates/main.css
@@ -2190,13 +2190,17 @@ strong {
     font-style: italic;
 }
 
-a:link.textUnderline,
-.textUnderline {
+a:link.textUnderline {
+    color: inherit;
     text-decoration-line: underline;
     text-decoration-thickness: 0.06em;
     text-underline-offset: 6px;
     text-decoration-color: var(--Grey900);
 }
+a:link.textUnderline:hover {
+    color: inherit;
+    text-decoration: underline; /* Ensure underline on hover */
+  }
 
 .allCaps {
     text-transform: uppercase;
