--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -101,7 +101,7 @@
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
       <div class="element">
-        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">My resume
+        <a href="/resume"> <button class="buttonLarge buttonPrimary bgVWGrey">View resume
           </button></a>
      
       </div>
@@ -155,10 +155,10 @@
             <div class="element">
               <h1 class="specialTextM fontWeight700">Business Booking Experience</h1>
 
-              <h3 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h3>
+              <h4 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h4>
               <ul>
 
-                <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
+                <li class="listCircle">Reduced average booking time from 5 minutes to less than 1 minute, making the process over 80% faster.
                 </li>
                 <li class="listCircle">
                   Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
@@ -226,7 +226,7 @@
 
 
         <div class="blankHS"></div>
-        <hr class="wrapperS">
+        <hr class="wrapperM">
         <div class="blankHS"></div>
 
         <div class="wrapper">
@@ -283,7 +283,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperS">
+      <hr class="wrapperM">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -340,7 +340,7 @@
         </div>
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperS">
+      <hr class="wrapperM">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -439,7 +439,7 @@
 
       </div>
       <div class="blankHS"></div>
-      <hr class="wrapperS">
+      <hr class="wrapperM">
       <div class="blankHS"></div>
 
       <div class="wrapper">
@@ -763,7 +763,7 @@
 
       </div>
       <div class="blankHXXS"></div>
-      <hr class="wrapperS colorBlack">
+      <hr class="wrapperM colorBlack">
       <div class="blankHXS"></div>
 
 
