--- a/templates/shared/head.ejs
+++ b/templates/shared/head.ejs
@@ -86,6 +86,8 @@
 
   <link rel="stylesheet" href="<%= websitePath %>/main.css">
   <script type="text/javascript" src="<%= websitePath %>/scripts.js"></script>
+  <script type="module" src="<%= websitePath %>/scripts.js"></script>
+
 
 
 
