--- a/templates/resume/index.ejs
+++ b/templates/resume/index.ejs
@@ -158,7 +158,7 @@
               <h6> jQuery</h6>
 
 
-              <h6> JavaScript, EJS(Embedded JavaScript templates) </h6>
+              <h6> JavaScript</h6>
 
             </div>
             <div class="element">
