--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -108,8 +108,10 @@
           <div class="element">
             <div class="stat">
               <%- include(`${templatePath}/shared/base_chip`, {
-                chipTxt: 'Monthly'
-                }) %>
+                chipSmallTxt: 'Monthly',
+                colorBg: 'colorBgBYPblue100',
+                colorTxt: 'colorBYPblue800'
+              }) %>
               <h2 class="stat-figure">
                 <span class="stat-prefix specialTextL fontWeight700">+</span>
                 <span class="stat-number specialTextL fontWeight700" data-countup-number="169">169</span>
@@ -132,9 +134,11 @@
           <div class="element">
             <div class="stat">
               <%- include(`${templatePath}/shared/base_chip`, {
-                chipTxt: 'Overtime'
-                }) %>
-           
+                chipSmallTxt: 'Overtime',
+                colorBg: 'colorBgBYPblue100',
+                colorTxt: 'colorBYPblue800'
+              }) %>
+   
               <h2 class="stat-figure">
                 <span class="stat-prefix specialTextL fontWeight700">-</span>
                 <span class="stat-number specialTextL fontWeight700" data-countup-number="80">80</span>
@@ -158,8 +162,10 @@
           <div class="element">
             <div class="stat">
               <%- include(`${templatePath}/shared/base_chip`, {
-                chipTxt: 'Monthly'
-                }) %>
+                chipSmallTxt: 'Monthly',
+                colorBg: 'colorBgBYPblue100',
+                colorTxt: 'colorBYPblue800'
+              }) %>
               <h2 class="stat-figure">
                 <span class="stat-prefix specialTextL fontWeight700">+</span>
                 <span class="stat-number specialTextL fontWeight700" data-countup-number="15">15</span>
