--- a/templates/byp_b2b_subscription/index.ejs
+++ b/templates/byp_b2b_subscription/index.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <!--Head-->
-<%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Mastering B2B SaaS Subscription Success by Vicky Wang`, 
-  description:'', 
+<%- include(`${templatePath}/shared/head`, {SEO:false, Title:`Designing for Growth: Mastering B2B SaaS Subscriptions by Vicky Wang`, 
+  description:'The redesign of the sign-up and subscription process transformed the subscription flow for a B2B SaaS platform, significantly boosting conversion rates and simplifying onboarding.', 
   pageURL:'byp_b2b_subscription/', thumbnailImgURL: 'vickywang_web.png'
 }) %>
 <!--Head-->
@@ -22,8 +22,8 @@
 
 
 <%- include(`${templatePath}/shared/block_banner`, { 
-    bannerTitle:`Mastering B2B SaaS Subscription Success`,
-    bannerSubTitle:``,
+    bannerTitle:`Designing for Growth`,
+    bannerSubTitle:`Mastering B2B SaaS Subscriptions`,
     bannerLogoUrl:`logo_BYP.svg`,
     SlideDeckUrl:`https://www.figma.com/proto/2MrhSGMpQRH3kDJEzSHnUg/BYP---Business-facing-(2024-Current)?page-id=2131%3A15721&type=design&node-id=2131-15722&viewport=746%2C528%2C0.07&t=4bgh0kiJHLl1Uld3-1&scaling=scale-down&starting-point-node-id=2131%3A15722&mode=design`,
     bannerBgColor:`colorBgBYP`, 
