--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -798,7 +798,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
               <div class="element">
                 <img class="iconMax" src="./Icon_Mobile.svg" alt="Mobile">
                 <div class="centerHorz">
-                  <div class="chip">Mobile</div>
+                  <div class="chipSmall">Mobile</div>
                 </div>
               </div>
             </div>
@@ -806,7 +806,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
               <div class="element">
                 <img class="iconMax" src="./Icon_Tablet.svg" alt="Tablet">
                 <div class="centerHorz">
-                  <div class="chip">Tablet</div>
+                  <div class="chipSmall">Tablet</div>
                 </div>
 
               </div>
@@ -815,7 +815,7 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
               <div class="element">
                 <img class="iconMax" src="./Icon_Laptop.svg" alt="Laptop">
                 <div class="centerHorz">
-                  <div class="chip">Laptop</div>
+                  <div class="chipSmall">Laptop</div>
                 </div>
 
               </div>
