--- a/templates/shared/block_banner.ejs
+++ b/templates/shared/block_banner.ejs
@@ -35,6 +35,8 @@
     <div class="ProjectBannerInnerND">
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2 class="ProjectBannerInnerElement"><strong><%= bannerTitle %></strong> </h2>
+      <div class="blankHTiny"></div>
+
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
       <div class="blankHTiny"></div>
 
@@ -51,6 +53,8 @@
     <div class="ProjectBannerInnerND">
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
+      <div class="blankHTiny"></div>
+
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
       <div class="blankHTiny"></div>
 
@@ -67,6 +71,8 @@
     <div class="ProjectBannerInnerND">
       <img class="widthXXS" src="<%- bannerLogoUrl %>" alt="Logo">
       <h2><strong><%= bannerTitle %></strong> </h2>
+      <div class="blankHTiny"></div>
+
       <h3 class="Grid Grid--center colorBlack"><%= bannerSubTitle %></h3>
       <div class="blankHTiny"></div>
 
