--- a/templates/verify.ejs
+++ b/templates/verify.ejs
@@ -23,7 +23,7 @@
         <div class="blankHTiny"></div>
 
         <!-- reCAPTCHA Form -->
-        <form action="vickywang.html" method="GET">
+        <form action="/" method="GET">
           <!-- CAPTCHA widget -->
           <div class="h-captcha" data-sitekey="0788d3f8-3090-4392-bcea-a72ac240402a"></div>
           <div class="blankHTiny"></div>
