--- a/templates/byp_b2b_booking/index.ejs
+++ b/templates/byp_b2b_booking/index.ejs
@@ -325,7 +325,7 @@
 
 
                   </div>
-                  <div class="paddingL fitContenteft">
+                  <div class="paddingL ">
                     <div class="widthFitContent">
                       <img class="widthXS" src="img_target_user.png" alt="icon arrow">
                     </div>
@@ -744,9 +744,9 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="paddingL fitContenteft">
-                      <div class="widthFitContent">
-                        <img class="widthS" src="img_finding1.png" alt="icon arrow">
+                    <div class="paddingL">
+                      <div class="">
+                        <img class="" src="img_finding1.png" alt="icon arrow">
                       </div>
                     </div>
 
@@ -797,9 +797,9 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="paddingL fitContenteft">
-                      <div class="widthFitContent">
-                        <img class="widthS" src="img_finding2.png" alt="icon arrow">
+                    <div class="paddingL">
+                      <div class="">
+                        <img class="" src="img_finding2.png" alt="icon arrow">
                       </div>
                     </div>
 
@@ -851,9 +851,9 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="paddingL fitContenteft">
-                      <div class="widthFitContent">
-                        <img class="widthS" src="img_finding3.png" alt="icon arrow">
+                    <div class="paddingL ">
+                      <div class="">
+                        <img class="" src="img_finding3.png" alt="icon arrow">
                       </div>
                     </div>
 
@@ -905,9 +905,9 @@
                         </li>
                       </ul>
                     </div>
-                    <div class="paddingL fitContenteft">
-                      <div class="widthFitContent">
-                        <img class="widthS" src="img_finding4.png" alt="icon arrow">
+                    <div class="paddingL ">
+                      <div class="">
+                        <img class="" src="img_finding4.png" alt="icon arrow">
                       </div>
                     </div>
 
