--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -349,7 +349,7 @@
                 </li>
 
                 <li class="listCircle">
-                  Enabling B2B users to complete onboarding independently without requiring hands-on assistance                </li>
+                  Enabling B2B users to complete onboarding independently without requiring hands-on assistance </li>
 
 
 
@@ -372,7 +372,7 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Consumer-Facing Generic Medication Purchase Experience
+              <h1 class="specialTextL fontWeight100"> Consumer-Facing Medication Purchase Experience
 
               </h1>
             </div>
@@ -439,11 +439,11 @@
           <div class="Grid-cell aside aside-1">
             <div class="element">
               <%- include(`${templatePath}/shared/base_chip`, {
-                chipSmallTxt: '1-2 Feature Enhancement',
+                chipSmallTxt: 'Research, Ideation, and Wireframing',
                 colorBg: 'colorBgYellowVW',
                 colorTxt: 'colorWhie'
               }) %>
-                            <div class="blankHTiny"></div>
+              <div class="blankHTiny"></div>
 
               <h1 class="specialTextM fontWeight700">LASO Local & Telehealth to RX Zero</h1>
 
@@ -509,7 +509,7 @@
                 colorBg: 'colorBgYellowVW',
                 colorTxt: 'colorWhie'
               }) %>
-                            <div class="blankHTiny"></div>
+              <div class="blankHTiny"></div>
 
               <h1 class="specialTextM fontWeight700">Admin Panel</h1>
 
@@ -598,6 +598,7 @@
           <div class="Grid-cell main">
             <div class="element">
 
+
               <div class="paddingXL borderRadiusL gradient_background1">
                 <a href="/design_system/">
                   <img src="/projectImages/vicky_website.svg" alt="Design System"></a>
@@ -608,6 +609,13 @@
 
           <div class="Grid-cell aside aside-2">
             <div class="element">
+              <%- include(`${templatePath}/shared/base_chip`, {
+                chipSmallTxt: 'Start from Scratch',
+                colorBg: 'colorBgYellowVW',
+                colorTxt: 'colorWhie'
+              }) %>
+              <div class="blankHTiny"></div>
+
               <h1 class="specialTextM fontWeight700">Design System Creation & Optimization</h1>
 
               <h3 class="colorLandingText fontWeight700">Design & Implementation</h3>
@@ -664,8 +672,10 @@
       <div class="Grid Grid--full Grid--gutters u-textCenter">
         <div class="Grid-cell">
           <div class="element">
-            <h1 class="specialTextL"> About Me
-              <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
+            <h1 class="specialTextL"> About Me</h1>
+            <div class="blankHTiny"></div>
+
+            <h2 class="specialTextS colorLandingText"> I craft simple, user-focused designs that meet business goals. </h2>
           </div>
         </div>
       </div>
